--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <ul>
             <li class="current menu0">Inicio</li>
-            <li class="menu1">Acerca de</li>
+            <li class="menu1">Sobre Mi</li>
             <li class="menu2">Proyectos</li>
             <li class="menu3">Contacto</li>
         </ul>
@@ -30,14 +30,14 @@
         <div class="slide slide0">
 
             <div id="title">
-                <h2>Hola, soy Jesus Alberto Garcia Zacarias</h2>
-                <h1>Matricula 202H17168</h1>
+                <h2>Hola, soy Angel Dominguez Segovia</h2>
+                <h1>Matricula 192H17076</h1>
                 <h2>y soy un desarrollador</h2>
             </div>
         </div>
 
         <div class="slide slide1">
-            <h1>Acerca de</h1>
+            <h1>Sobre Mi</h1>
 
 
         </div>
@@ -46,9 +46,9 @@
             <h1>Proyectos</h1>
             <h2>Mis proyectos:</h2>
             <h2></h2>
-            <h2>Aplicación Movil de emergencias.</h2>
-            <h2>Pagina web E-commerce</h2>
-            <h2>Pagina web de Gym</h2>
+            <h2>Sistema de registro para verano cientifico.</h2>
+            <h2>Pagina web de papeleria</h2>
+            
 
         </div>
 
@@ -57,17 +57,17 @@
             <h2>Pueden buscarme aqui:</h2>
 
             <ul>
-                <a href="mailto:jagz26052002@gmail.com">
+                <a href="mailto:angelsegovia216@gmail.com">
                     <li>
-                        <i class="fa fa-envelope"></i> Mail
+                        <i class="fa fa-envelope"></i> Correo
                     </li>
                 </a>
-                <a href="https://codepen.io/Betucky/">
+                <a href="https://codepen.io/AngelDS01/">
                     <li>
                         <i class="fa fa-codepen"></i> Codepen
                     </li>
                 </a>
-                <a href="https://github.com/Betucky">
+                <a href="https://github.com/AngelDS01">
                     <li>
                         <i class="fa fa-github"></i> Github
                     </li>
@@ -78,7 +78,7 @@
     </div>
 
     <footer>
-        <p class="copy">Betucky &copy; 2023</p>
+        <p class="copy">AngelDS01 &copy; 2023</p>
 
         <div id="links">
             <a href="mailto:jagz26052002@gmail.com"><i class="fa fa-envelope"></i></a>
